add PS2 controller support
Former-commit-id: b5e562b1621f6440d3f912c4bc517bde677bac0c

--- a/MUNIA-win/MUNIA/MUNIA.csproj
+++ b/MUNIA-win/MUNIA/MUNIA.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Controllers\ArduinoN64.cs" />
     <Compile Include="Controllers\ArduinoNgc.cs" />
     <Compile Include="Controllers\ArduinoSnes.cs" />
+    <Compile Include="Controllers\MusiaPS2.cs" />
     <Compile Include="Forms\AboutBox.cs">
       <SubType>Form</SubType>
     </Compile>
