--- a/firmware/MUSIA/VisualGDB/stm32.props
+++ b/firmware/MUSIA/VisualGDB/stm32.props
@@ -16,7 +16,7 @@
 	<ItemDefinitionGroup>
 		<Link>
 			<LinkerScript Condition="'%(Link.LinkerScript)' == ''">$(BSP_ROOT)/STM32F0xxxx/LinkerScripts/STM32F042C6_flash.lds</LinkerScript>
-			<AdditionalOptions>--specs=nano.specs %(Link.AdditionalOptions)</AdditionalOptions>
+			<AdditionalOptions>--specs=nano.specs --specs=nosys.specs %(Link.AdditionalOptions)</AdditionalOptions>
 		</Link>
 	</ItemDefinitionGroup>
 	<PropertyGroup>
